# github_indexer

./: .coverage  .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
control/: contract.yml
docs/: ARCHITECTURE.md  CHECKLIST.md  INTEGRATION_PRFACTORY.md  OPERATIONS.md  POLICY.md  ROADMAP.md  SECURITY.md
scripts/: catalog_demo.ps1  risk_policy_gate.py  run_github_webhook_proxy.ps1
src/repo_recall/: cli.py  config.py  db.py  embeddings.py  jobs.py  logging.py  redaction.py  schema.sql
src/repo_recall/api/: app.py
src/repo_recall/catalog/: __init__.py  auth.py  db.py  github_client.py  jobs.py  models.py  scheduler.py  scoring.py  service.py  token_provider.py  webhooks.py
src/repo_recall/connectors/: __init__.py
src/repo_recall/connectors/prfactory/: __init__.py  adapter.py  http_adapter.py  mock_adapter.py  types.py
src/repo_recall/indexer/: chunking.py  file_discovery.py  git_changes.py  indexer.py  ingest.py  python_chunking.py  summarizer.py
src/repo_recall/retrieval/: scoring.py  search.py
src/repo_recall/ui/: __init__.py
tests/: test_api_startup.py  test_catalog_api_routes.py  test_catalog_auth.py  test_catalog_github_client.py  test_catalog_http_adapter.py  test_catalog_schema.py  test_catalog_scoring.py  test_catalog_service.py  test_catalog_token_provider.py  test_catalog_webhooks.py  test_chunking.py  test_config_settings.py  test_git_changes.py  test_prfactory_connector.py  test_redaction.py  test_risk_policy_gate.py  test_scoring.py
(+6 files in other folders)
